[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/Images/ProtestoBandeirante/Cenario.jpeg" type="Texture" id=1]
[ext_resource path="res://assets/Images/ProtestoBandeirante/sindicalista_distrator_multid√£o3.png" type="Texture" id=2]
[ext_resource path="res://assets/Images/ProtestoBandeirante/distrator1_line_colorido.png" type="Texture" id=3]
[ext_resource path="res://assets/Images/ProtestoBandeirante/distrator2_line_colorido.png" type="Texture" id=4]
[ext_resource path="res://scenes/NucleoBandeirante/Multidao.gd" type="Script" id=5]
[ext_resource path="res://scenes/AuxScenes/AudioController.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/audio/soundtrack/hotel diamantina.mp3" type="AudioStream" id=8]
[ext_resource path="res://scenes/AuxScenes/PlayerBackPack.tscn" type="PackedScene" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="Multidao" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="Cenario" type="Sprite" parent="."]
position = Vector2( 512, 288 )
scale = Vector2( 0.389833, 0.389833 )
texture = ExtResource( 1 )

[node name="ButtonDist1" type="Button" parent="."]
margin_left = 41.0
margin_top = 183.0
margin_right = 270.0
margin_bottom = 578.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 1 )

[node name="Dist1" type="Sprite" parent="ButtonDist1"]
position = Vector2( 144, 254 )
scale = Vector2( 0.334267, 0.334267 )
texture = ExtResource( 3 )

[node name="ButtonDist2" type="Button" parent="."]
margin_left = 400.0
margin_top = 164.0
margin_right = 668.0
margin_bottom = 577.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )

[node name="Dist2" type="Sprite" parent="ButtonDist2"]
position = Vector2( 125, 266 )
scale = Vector2( 0.299553, 0.3 )
texture = ExtResource( 4 )

[node name="MainMusic" parent="." instance=ExtResource( 7 )]
stream = ExtResource( 8 )

[node name="ButtonDist3" type="Button" parent="."]
margin_left = 801.0
margin_top = 160.0
margin_right = 1001.0
margin_bottom = 611.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )

[node name="Dist3" type="Sprite" parent="ButtonDist3"]
position = Vector2( 97.0001, 286 )
scale = Vector2( 0.289532, 0.289532 )
texture = ExtResource( 2 )

[node name="PlayerBackPack" parent="." instance=ExtResource( 9 )]

[connection signal="pressed" from="ButtonDist1" to="." method="distractor1_pressed"]
[connection signal="pressed" from="ButtonDist2" to="." method="distractor2_pressed"]
[connection signal="pressed" from="ButtonDist3" to="." method="distractor3_pressed"]
